# calculadora-do-cidadao

./: .gitignore  .readthedocs.yml  CHANGELOG  CONTRIBUTING.md  Makefile  README.md  calculadora_do_cidadao.py  pyproject.toml  requirements-development.txt  setup.cfg  setup.py
.github/workflows/: tests.yml
calculadora_do_cidadao/: __init__.py  __main__.py  adapters.py  base.py  download.py  fields.py  months.py  pandas.py  typing.py
calculadora_do_cidadao/adapters/: __init__.py  cpi.py  dieese.py  ibge.py  igpm.py  inpc.py  ipca.py  ipca15.py  selic.py  tr.py
calculadora_do_cidadao/rows/: __init__.py  fields.py  table.py
calculadora_do_cidadao/rows/plugins/: __init__.py  dicts.py  plugin_csv.py  plugin_html.py  utils.py  xls.py
docs/: api.rst  conf.py  index.rst  new_adapters.rst  requirements.txt  usage.rst
tests/: __init__.py  conftest.py  ipca_fixture.xls  test_adapters.py  test_base.py  test_download.py  test_fields.py  test_inpc_adapter.py  test_ipca15_adapter.py  test_ipca_adapter.py  test_main.py  test_pandas.py  test_proof_of_concept.py  test_selic_adapter.py
tests/fixtures/: broken-table.html  calculadora-do-cidadao.csv  cestabasica.html  cpiaucsl.xls  goodadapter.csv  igpm.html  inpc.xls  ipca15.xls  ipcae.xls  selic.html  selic.json
