[tool.poetry]
name = "calculadora-do-cidadao"
version = "0.5.2"
description = "Tool for Brazilian Reais monetary adjustment/correction"
authors = ["Eduardo Cuducos <cuducos@users.noreply.github.com>"]
license = "GPLv3"
readme = "README.md"
homepage = "https://calculadora-do-cidadao.readthedocs.io/"
repository = "https://github.com/cuducos/calculadora-do-cidadao/"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Utilities",
]
keywords = [
    "Brazil",
    "Brazilian Reais",
    "monetary adjusment",
    "monetary correction",
    "Inflation",
]
packages = [
    { include = "calculadora_do_cidadao" },
]

[tool.poetry.dependencies]
python = "^3.7"
pip = { version = ">=20.0.0", optional = true }
readthedocs-sphinx-ext = { version = ">=2.1.3", optional = true }
requests = ">=2.22.0"
rows = {version = ">=0.4.1", extras = ["csv", "html", "xls"]}
sphinx = { version = ">=3.4.3", optional = true }
sphinx-rtd-theme = { version = ">=0.5.1", optional = true }
typer = ">=0.0.8"

[tool.poetry.dev-dependencies]
black = "20.8b1"
coverage = {extras = ["toml"], version = "^5.3.1"}
freezegun = "^1.1.0"
pytest = "^6.2.2"
pytest-black = "^0.3.12"
pytest-cov = "^2.11.1"
pytest-mock = "^3.5.1"
pytest-mypy = "^0.8.0"
tox = "^3.21.2"

[tool.pytest.ini_options]
addopts = "--black --mypy --mypy-ignore-missing-imports --cov=calculadora_do_cidadao --cov-report term --disable-warnings"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.poetry.extras]
docs = ["pip", "readthedocs-sphinx-ext", "sphinx", "sphinx-rtd-theme"]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist =
    py{3.7,3.8,3.9}

[gh-actions]
python =
    3.7: py3.7
    3.8: py3.8
    3.9: py3.9

[testenv]
commands =
    pytest
"""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
