[tool.poetry]
name = "calculadora-do-cidadao"
version = "1.0.0"
description = "Tool for Brazilian Reais monetary adjustment/correction"
authors = ["Eduardo Cuducos <cuducos@users.noreply.github.com>"]
license = "GPLv3"
readme = "README.md"
homepage = "https://calculadora-do-cidadao.readthedocs.io/"
repository = "https://github.com/cuducos/calculadora-do-cidadao/"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Utilities",
]
keywords = [
    "Brazil",
    "Brazilian Reais",
    "monetary adjusment",
    "monetary correction",
    "Inflation",
]
packages = [
    { include = "calculadora_do_cidadao" },
]

[tool.poetry.dependencies]
python = "^3.7"
pip = { version = ">=20.0.0", optional = true }
lxml = "^4.7.1"
readthedocs-sphinx-ext = { version = ">=2.1.3", optional = true }
requests = ">=2.22.0"
sphinx = { version = ">=3.4.3", optional = true }
sphinx-rtd-theme = { version = ">=0.5.1", optional = true }
typer = ">=0.0.8"
unicodecsv = "^0.14.1"
xlrd = "^2.0.1"
xlwt = "^1.3.0"

[tool.poetry.dev-dependencies]
black = "21.9b0"
coverage = {extras = ["toml"], version = "^5.5"}
freezegun = "^1.1.0"
pytest = "^6.2.5"
pytest-black = "^0.3.12"
pytest-cov = "^2.12.1"
pytest-mock = "^3.6.1"
pytest-mypy = "^0.8.1"
tox = "^3.24.4"
types-freezegun = "^1.1.6"
types-requests = "^2.27.7"
types-setuptools = "^57.4.7"

[tool.pytest.ini_options]
addopts = "--black --mypy --mypy-ignore-missing-imports --ignore calculadora_do_cidadao/rows/ --cov=calculadora_do_cidadao --cov-report term --disable-warnings"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
omit = ["calculadora_do_cidadao/rows/*"]

[tool.mypy]
exclude = ["^calculadora_do_cidadao/rows/"]

[tool.poetry.extras]
docs = ["pip", "readthedocs-sphinx-ext", "sphinx", "sphinx-rtd-theme"]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist =
    py{3.7,3.8,3.9}

[gh-actions]
python =
    3.7: py3.7
    3.8: py3.8
    3.9: py3.9

[testenv]
deps = poetry
commands =
    poetry export --dev --without-hashes --output /tmp/calculadora-do-cidadao.requirements.txt
    pip install -r /tmp/calculadora-do-cidadao.requirements.txt
    pytest --black --mypy --mypy-ignore-missing-imports --ignore calculadora_do_cidadao/rows/ --cov=calculadora_do_cidadao --cov-report term --disable-warnings
"""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
